--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "http": "0.0.0",
     "jsforce": "^1.11.0",
     "request": "^2.88.0",
-    "dotenv": "10.0.0"
+    "dotenv": "10.0.0",
+    "axios": "^1.6.7"
   },
   "overrides": {
     "jsforce": {
